--- a/css/main.css
+++ b/css/main.css
@@ -66,3 +66,26 @@ nav li:last-child {
   -moz-transition: width .7s;
   transition: width .7s;
 }
+
+                 /*main-article*/
+
+.main-article{
+  background: #fff;
+  margin: 30px 0 30px;
+  padding: 20px 35px;
+  width: 670px;
+  float: left;
+  -webkit-border-radius: 8px;
+  -moz-border-radius: 8px;
+  border-radius: 8px;
+  -webkit-box-shadow: 0 1px 3px rgba(0,0,0,.4);
+  -moz-box-shadow: 0 1px 3px rgba(0,0,0,.4);
+  box-shadow: 0 1px 3px rgba(0,0,0,.4);
+}
+
+                   /*aside*/
+aside {
+  width: 280px;
+  float: right;
+  margin: 30px 0 30px;
+}
